--- a/src/styles/Articles.css
+++ b/src/styles/Articles.css
@@ -15,7 +15,6 @@
 }
 
 .all_posts .wrapper .col .filter .filter_header {
-  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   text-align: center;
   padding: 0 0 10px 0;
@@ -47,5 +46,10 @@
 @media screen and (max-width: 600px) {
   .all_posts .wrapper .col:nth-child(1) {
     display: none;
+  }
+
+  .all_posts .wrapper .col:nth-child(2) {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 15px;
   }
 }
