--- a/src/styles/PostPage.css
+++ b/src/styles/PostPage.css
@@ -14,6 +14,9 @@
 
 .post .post_wrapper .post_image_container .post_image {
   object-fit: cover;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
 }
 
 .post .post_wrapper .post_actual {
