--- a/src/styles/ArticleCard.css
+++ b/src/styles/ArticleCard.css
@@ -4,6 +4,7 @@
   border-radius: 3px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   transition: all 0.3s ease;
+  overflow: hidden;
 }
 
 .article_card:hover {
@@ -27,7 +28,6 @@
   text-transform: capitalize;
   color: var(--primary);
   padding: 5px;
-  height: 10%;
 
   display: -webkit-box;
   -webkit-line-clamp: 2;
