--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -8,86 +8,36 @@
 .navbar .wrapper {
   height: 100%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
 .navbar .wrapper .col {
-  flex: 1;
+  width: 50%;
   height: 100%;
   display: flex;
   align-items: center;
 }
-
-.navbar .wrapper .hamburger {
-  display: none;
-  flex-direction: column;
-  gap: 5px;
-  height: 30px;
-  width: 40px;
-  opacity: 0.8;
+.navbar .wrapper .col:last-child {
+  justify-content: flex-end;
 }
 
-.navbar .wrapper .hamburger .line {
-  height: 3px;
-  width: 100%;
-  background-color: var(--primary);
-  border-radius: 30px;
-}
-
-.navbar .wrapper .hamburger .line:first-child {
-  width: 35%;
-}
-
-.navbar .wrapper .hamburger .line:nth-child(2) {
-  width: 90%;
-}
-
-.navbar .wrapper .hamburger .line:last-child {
-  width: 75%;
-}
-
-.navbar .wrapper .col .list {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.navbar .wrapper .col .list a {
-  color: var(--primary);
-}
-
-.navbar .wrapper .col .list a .list_item {
-  text-transform: capitalize;
-}
-
-.navbar .wrapper .col .nav_logo_wrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.navbar .wrapper .col .logo_image {
-  width: 100%;
-  height: 100%;
+.navbar .wrapper .col .nav_logo {
   object-fit: contain;
+  width: 130px;
+}
+
+.navbar .wrapper .col .nav_icon {
+  width: 30px;
   cursor: pointer;
 }
 
-/* Mobile */
 @media screen and (max-width: 600px) {
-  .navbar .wrapper .col:first-child {
-    display: none;
+  .navbar .wrapper .col .nav_logo {
+    width: 100px;
   }
 
-  .navbar .wrapper .col .logo_image {
-    width: 35%;
-  }
-
-  .navbar .wrapper .col:nth-child(3) {
-    display: none;
-  }
-
-  .navbar .wrapper .hamburger {
-    display: flex;
+  .navbar .wrapper .col .nav_icon {
+    width: 25px;
   }
 }
