--- a/src/styles/Navigator.css
+++ b/src/styles/Navigator.css
@@ -1,10 +1,10 @@
 .navigator {
   position: fixed;
   top: 90px;
-  right: 5%;
+  right: 5.2%;
   background-color: var(--content-bg);
-  width: 450px;
-  height: 600px;
+  width: 350px;
+  height: fit-content;
   padding: 2%;
   border-radius: 3px;
   z-index: 10;
