--- a/src/styles/PostPage.css
+++ b/src/styles/PostPage.css
@@ -43,7 +43,8 @@
   margin: 5px 0 20px 0;
 }
 
-.post .post_wrapper .post_actual .col .post_refs a {
+.post .post_wrapper .post_actual .col .post_refs > a,
+span {
   border-right: 2px solid var(--primary);
   padding-right: 10px;
   color: var(--secondary);
