--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 :root {
   --primary: #081f2c;
   --secondary: grey;
-  --body-bg: #f4f5ff;
+  --body-bg: #ebebeb;
   --content-bg: #ffffff;
   --highlight: red;
   --font-primary: "Itim", cursive;
