--- a/src/styles/Article.css
+++ b/src/styles/Article.css
@@ -17,6 +17,11 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.post .post_wrapper .post_image_container .post_image:hover {
+  transform: scale(1.04);
 }
 
 .post .post_wrapper .post_actual {
