--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,6 +1,6 @@
-.navigator {
+.menu {
   position: fixed;
-  top: 90px;
+  top: 92px;
   right: 5.2%;
   background-color: var(--content-bg);
   width: 350px;
@@ -8,9 +8,20 @@
   padding: 2%;
   border-radius: 3px;
   z-index: 10;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
-.navigator .list {
+.menu_bg {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 90px;
+  z-index: 9;
+  backdrop-filter: blur(5px);
+}
+
+.menu .list {
   width: 100%;
   height: 100%;
   display: flex;
@@ -19,18 +30,18 @@
   gap: 35px;
 }
 
-.navigator .list a {
+.menu .list a {
   width: 100%;
   text-align: center;
 }
 
-.navigator .list .listItem {
+.menu .list .listItem {
   width: 100%;
   border-bottom: 0.1px solid var(--primary);
 }
 
 @media screen and (max-width: 600px) {
-  .navigator {
+  .menu {
     right: 0;
     left: 0;
     margin: auto;
