--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -1,51 +1,18 @@
 .menu {
-  position: fixed;
-  top: 92px;
-  right: 5.2%;
-  background-color: var(--content-bg);
-  width: 350px;
-  height: fit-content;
-  padding: 2%;
-  border-radius: 3px;
-  z-index: 10;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
-
-.menu_bg {
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
-  left: 0;
-  top: 90px;
-  z-index: 9;
-  backdrop-filter: blur(5px);
-}
-
-.menu .list {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
+  height: 35px;
+  background-color: var(--primary);
+  display: none;
   justify-content: center;
-  gap: 35px;
+  align-items: center;
 }
 
-.menu .list a {
-  width: 100%;
-  text-align: center;
-}
-
-.menu .list .listItem {
-  width: 100%;
-  border-bottom: 0.1px solid var(--primary);
+.menu .menu_list {
+  display: flex;
+  gap: 10px;
 }
 
 @media screen and (max-width: 600px) {
   .menu {
-    right: 0;
-    left: 0;
-    margin: auto;
-    width: 90%;
-    height: 90%;
+    display: flex;
   }
 }
