--- a/src/styles/Article.css
+++ b/src/styles/Article.css
@@ -43,6 +43,7 @@
 
 .post .post_wrapper .post_actual .col .post_refs {
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   gap: 20px;
   margin: 5px 0 20px 0;
@@ -50,9 +51,20 @@
 
 .post .post_wrapper .post_actual .col .post_refs > a,
 span {
+  text-transform: uppercase;
+  border-right: 2px solid var(--primary);
   border-right: 2px solid var(--primary);
   padding-right: 10px;
   color: var(--secondary);
+}
+
+.post .post_wrapper .post_actual .col .post_refs span {
+  color: var(--primary);
+  cursor: pointer;
+}
+
+.post .post_wrapper .post_actual .col .post_refs span:last-child {
+  color: var(--highlight);
 }
 
 .post .post_wrapper .post_actual .col .post_refs a:last-child {
