--- a/src/styles/Article.css
+++ b/src/styles/Article.css
@@ -47,6 +47,7 @@
   flex-wrap: wrap;
   gap: 20px;
   margin: 5px 0 20px 0;
+  font-size: 14px;
 }
 
 .post .post_wrapper .post_actual .col .post_refs > a,
@@ -61,14 +62,6 @@ span {
 .post .post_wrapper .post_actual .col .post_refs span {
   color: var(--primary);
   cursor: pointer;
-}
-
-.post .post_wrapper .post_actual .col .post_refs span:last-child {
-  color: var(--highlight);
-}
-
-.post .post_wrapper .post_actual .col .post_refs a:last-child {
-  border-right: none;
 }
 
 .post .post_wrapper .post_actual .col .post_details {
