--- a/src/styles/Publish.css
+++ b/src/styles/Publish.css
@@ -1,3 +1,10 @@
+.publish {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .publish .wrapper {
   height: 100%;
   width: 100%;
